--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 
 <body>
+
+  
     <header class="main-head">
+        <div class="hell">
         <img src="./images/logo.png">
+        </div>
         <div class="div">
             <ul class="list">
                 <li><a href="#">Home</a></li>
@@ -100,15 +104,14 @@
 
     <section class="section-4">
         <div class="block-4">
-            <div>
+            <div class="title-para-4">
                 <h1 class="title-4">title here</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="span">aliquid? Aliquam fuga
-                        Lorem ipsum dolor sit amet <span class="span-2"> adipisicing elit. Commodi rerum repellat
-                            tenetur.!</span></span></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                    </p>
                 <button class="order-4">Order Now</button>
             </div>
-            <div class="img">
-                <img src="./images/pet_care.png" width="500px">
+            <div class="img 1">
+                <img src="./images/pet_care.png" width="100%">
             </div>
         </div>
     </section>
@@ -120,15 +123,13 @@
 
     <section class="section-5">
         <div class="block-5">
-            <div>
+            <div class="title-para-5">
                 <h1 class="title-5">title here</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="span-5">aliquid? Aliquam fuga
-                        Lorem ipsum dolor sit amet <span class="spans-5"> adipisicing elit. Commodi rerum repellat
-                            tenetur.!</span></span></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing  </p>
                 <button class="order-5">Order Now</button>
             </div>
-            <div>
-                <img src="./images/pet_shop.png" width="500px">
+            <div class="img 2">
+                <img src="./images/pet_shop.png" width="100%">
             </div>
         </div>
     </section>
@@ -141,7 +142,7 @@
 
     <section class="section-6">
         <div class="title-6">
-            <h1>title here</h1>
+            <h2>title here</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In maiores voluptatum nostrum consequatur! Neque
                 labore.</p>
         </div>
@@ -192,9 +193,9 @@
 
                 <div class="span one">
                     <h2>Lorem Ipsum</h2>
-                    <p>Lorem ipsum dolor sit amet,
-                        <span class="span1">consectetur adipiscing elit. </span>
-                        <span class="span1">Vivamus Iacinia odio vitae</span>
+                    <p>Lorem ipsum dolor sit 
+                        <span class="span1">consectetur adipiscing. </span>
+                        <span class="span1">Vivamus Iacinia odio</span>
                         <span class="span1">vestibulum vestibulum.</span>
                     </p>
                 </div>
@@ -203,24 +204,24 @@
                 <img src="./images/dog_paw.png" width="100" height="100">
                 <div class="span two">
                     <h2>Lorem Ipsum</h2>
-                    <p>Lorem ipsum dolor sit amet,
-                        <span class="span1">consectetur adipiscing elit. </span>
-                        <span class="span1">Vivamus Iacinia odio vitae</span>
+                    <p>Lorem ipsum dolor sit 
+                        <span class="span1">consectetur adipiscing. </span>
+                        <span class="span1">Vivamus Iacinia odio</span>
                         <span class="span1">vestibulum vestibulum.</span>
                     </p>
                 </div>
 
 
 
-            </div>
+            </div>  
 
             <div class="para three">
                 <img src="./images/dog_paw.png" width="100" height="100">
                 <div class="span three">
                     <h2>Lorem Ipsum</h2>
-                    <p>Lorem ipsum dolor sit amet,
-                        <span class="span1">consectetur adipiscing elit.</span>
-                        <span class="span1">Vivamus Iacinia odio vitae</span>
+                    <p>Lorem ipsum dolor sit
+                        <span class="span1">consectetur adipiscing.</span>
+                        <span class="span1">Vivamus Iacinia odio</span>
                         <span class="span1">vestibulum vestibulum.</span>
                     </p>
                 </div>
@@ -229,9 +230,9 @@
                 <img src="./images/dog_paw.png" width="100" height="100">
                 <div class="span four">
                     <h2>Lorem Ipsum</h2>
-                    <p>Lorem ipsum dolor sit amet,
-                        <span class="span1">consectetur adipiscing elit.</span>
-                        <span class="span1">Vivamus Iacinia odio vitae</span>
+                    <p>Lorem ipsum dolor sit
+                        <span class="span1">consectetur adipiscing.</span>
+                        <span class="span1">Vivamus Iacinia odio</span>
                         <span class="span1">vestibulum vestibulum.</span>
                     </p>
                 </div>
@@ -259,18 +260,16 @@
                      <!-- section 9 -->
 
 
-    <footer class="footer">
-        <div class="header-foot">
-        <h1>title here</h1>
-     <p >Lorem ipsum dolor sit amet consectetur adipisicing elit.<span class="span 1">
-
-      Ipsum totam quasi voluptates est illo veniam</span><span class="span 2"> aliquam laboriosam doloremque culpa, cum nulla quas</span> eius possimus tempora velit enim! Repellat, debitis natus?</p>
+    <footer class="footer moble-view">
+        <div class="header-foot ">
+        <h2>title here</h2>
+     <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. debitis natus?</p>
          </div>
 
 
-          <div class="full-list">
+          <div class="full-list moble-view">
 
-            <div class="about class">
+            <div class="about class ">
             <h3>About</h3>
             <ul class="uno 1">
                 <li>History</li>
@@ -308,3 +307,4 @@
 </body>
 
 </html>
+    
