--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
         <div class="trainer">
 
             <div class="train-1">
-                <img src="./images/pet_care.png">
+                <img src="./images/pet_care.png" class="train-img">
                 <h3>pet care</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, doloremque cum </p>
             </div>
 
             <div class="train-2">
-                <img src="./images/pet_shop.png">
+                <img src="./images/pet_shop.png" class="train-img">
                 <h3>pet shop</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, doloremque cum </p>
             </div>
 
             <div class="train-3">
-                <img src="./images/pet_help.png">
+                <img src="./images/pet_help.png"   class="train-img">
                 <h3>pet help</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, doloremque cum </p>
             </div>
