--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </p>
                 <button class="order-4">Order Now</button>
             </div>
-            <div class="img 1">
+            <div class="img-1">
                 <img src="./images/pet_care.png" width="100%">
             </div>
         </div>
@@ -128,8 +128,8 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing  </p>
                 <button class="order-5">Order Now</button>
             </div>
-            <div class="img 2">
-                <img src="./images/pet_shop.png" width="100%">
+            <div class="img-2">
+                <img src="./images/pet_care.png" width="100%">
             </div>
         </div>
     </section>
@@ -180,7 +180,7 @@
     <section class="sub-main-section-7">
         <div class="Title header-7">
             <h2>Title Here</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <p>Lorem ipsum dolor sit amet, consectetur 
                 <span class="span1">
                     Vivamus Iacinia odio vitae vestibulum vestibulum.
                 </span>
@@ -193,7 +193,7 @@
 
                 <div class="span one">
                     <h2>Lorem Ipsum</h2>
-                    <p>Lorem ipsum dolor sit 
+                    <p>Lorem ipsum dolor 
                         <span class="span1">consectetur adipiscing. </span>
                         <span class="span1">Vivamus Iacinia odio</span>
                         <span class="span1">vestibulum vestibulum.</span>
@@ -204,7 +204,7 @@
                 <img src="./images/dog_paw.png" width="100" height="100">
                 <div class="span two">
                     <h2>Lorem Ipsum</h2>
-                    <p>Lorem ipsum dolor sit 
+                    <p>Lorem ipsum dolor  
                         <span class="span1">consectetur adipiscing. </span>
                         <span class="span1">Vivamus Iacinia odio</span>
                         <span class="span1">vestibulum vestibulum.</span>
@@ -219,7 +219,7 @@
                 <img src="./images/dog_paw.png" width="100" height="100">
                 <div class="span three">
                     <h2>Lorem Ipsum</h2>
-                    <p>Lorem ipsum dolor sit
+                    <p>Lorem ipsum dolor
                         <span class="span1">consectetur adipiscing.</span>
                         <span class="span1">Vivamus Iacinia odio</span>
                         <span class="span1">vestibulum vestibulum.</span>
@@ -230,7 +230,7 @@
                 <img src="./images/dog_paw.png" width="100" height="100">
                 <div class="span four">
                     <h2>Lorem Ipsum</h2>
-                    <p>Lorem ipsum dolor sit
+                    <p>Lorem ipsum dolor        
                         <span class="span1">consectetur adipiscing.</span>
                         <span class="span1">Vivamus Iacinia odio</span>
                         <span class="span1">vestibulum vestibulum.</span>
