--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../front_end_class/font1/all.css">
 </head>
 
 <body>
@@ -263,7 +264,13 @@
     <footer class="footer moble-view">
         <div class="header-foot ">
         <h2>title here</h2>
-     <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. debitis natus?</p>
+     <p >Lorem ipsum dolor sit amet consectetur<br> adipisicing elit. debitis natus?</p>
+     <div class="fonts">
+     <i class="fa-brands fa-facebook"></i>
+     <i class="fa-brands fa-instagram"></i>
+     <i class="fa-brands fa-whatsapp"></i>
+     <i class="fa-brands fa-youtube"></i>
+    </div>
          </div>
 
 
