--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="../front_end_class/font1/all.css">
+    <link rel="stylesheet" href="./font1/all.css">
 </head>
 
 <body>
