--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>We care about your pet</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<span class="p-block"> Voluptatem mollitia sed
                 necessitatibus soluta voluptatum eveniet voluptates commodi facere nulla nisi</span></p>
-        <button>Order Now</button>
+        <button class="first-search">Order Now</button>
     </section>
 
     <!-- section 2 -->
