--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <h2>Lorem Ipsum</h2>
                     <p>Lorem ipsum dolor 
                         <span class="span1">consectetur adipiscing. </span>
-                        <span class="span1">Vivamus Iacinia odio</span>
+                        <span class="span1">Vivamus Iacinia </span>
                         <span class="span1">vestibulum vestibulum.</span>
                     </p>
                 </div>
@@ -208,7 +208,7 @@
                     <h2>Lorem Ipsum</h2>
                     <p>Lorem ipsum dolor  
                         <span class="span1">consectetur adipiscing. </span>
-                        <span class="span1">Vivamus Iacinia odio</span>
+                        <span class="span1">Vivamus Iacinia </span>
                         <span class="span1">vestibulum vestibulum.</span>
                     </p>
                 </div>
@@ -223,7 +223,7 @@
                     <h2>Lorem Ipsum</h2>
                     <p>Lorem ipsum dolor
                         <span class="span1">consectetur adipiscing.</span>
-                        <span class="span1">Vivamus Iacinia odio</span>
+                        <span class="span1">Vivamus Iacinia </span>
                         <span class="span1">vestibulum vestibulum.</span>
                     </p>
                 </div>
@@ -234,7 +234,7 @@
                     <h2>Lorem Ipsum</h2>
                     <p>Lorem ipsum dolor        
                         <span class="span1">consectetur adipiscing.</span>
-                        <span class="span1">Vivamus Iacinia odio</span>
+                        <span class="span1">Vivamus Iacinia</span>
                         <span class="span1">vestibulum vestibulum.</span>
                     </p>
                 </div>
