--- a/index.html
+++ b/index.html
@@ -50,19 +50,22 @@
             <div class="train-1">
                 <img src="./images/pet_care.png" class="train-img">
                 <h3>pet care</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, doloremque cum </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <span> Porro, doloremque cum</span> </p>
             </div>
 
             <div class="train-2">
                 <img src="./images/pet_shop.png" class="train-img">
                 <h3>pet shop</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, doloremque cum </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                  <span>Porro, doloremque cum </span>  </p>
             </div>
 
             <div class="train-3">
                 <img src="./images/pet_help.png"   class="train-img">
                 <h3>pet help</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, doloremque cum </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <span>Porro, doloremque cum</span>  </p>
             </div>
         </div>
     </section>
@@ -265,7 +268,7 @@
     <footer class="footer moble-view">
         <div class="header-foot ">
         <h2>title here</h2>
-     <p >Lorem ipsum dolor sit amet consectetur<br> adipisicing elit. debitis natus?</p>
+     <p >Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> debitis natus?</p>
      <div class="fonts">
      <i class="fa-brands fa-facebook"></i>
      <i class="fa-brands fa-instagram"></i>
