--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     <footer class="footer moble-view">
         <div class="header-foot ">
         <h2>title here</h2>
-     <p >Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> debitis natus?</p>
+     <p >Lorem ipsum dolor sit amet consectetur<br> adipisicing elit. debitis natus?</p>
      <div class="fonts">
      <i class="fa-brands fa-facebook"></i>
      <i class="fa-brands fa-instagram"></i>
