--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <div class="container mt-5">
         <a class="btn btn-primary " href="./html_conversion/index.html">html conversion</a>
-        <a class="btn btn-primary" href="#">github search</a>
-        <a class="btn btn-primary" href="">another project</a>
+        <a class="btn btn-primary" href="./practice_github_profile_search/practice.html">github search</a>
+        <a class="btn btn-primary" href="#">another project</a>
 
     </div>
 
