i have changed heading

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
 
     <div class="container mt-5">
-        <a class="btn btn-primary " href="./html_conversion/index.html">html conversion</a>
-        <a class="btn btn-primary" href="./practice_github_profile_search/practice.html">github search</a>
-        <a class="btn btn-primary" href="#">another project</a>
+        <a class="btn btn-primary " href="./html_conversion/index.html" target="_blank">HTML conversion</a>
+        <a class="btn btn-primary" href="./practice_github_profile_search/github_search.html" target="_blank">Github Search</a>
+        <a class="btn btn-primary" href="#">Another Project</a>
 
     </div>
 
