--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 
 <body>
+    
 
-    <div class="container p-5 bg-primary text-white text-center">
-        <h1>My project</h1>
-        <p>Resize this responsive page to see the effect!</p>
+    <div class="container mt-5 p-5 bg-dark text-black text-center">
+        <h1 class="text-bg-dark">MY PROJECT</h1>
+        <p class="bg-white">link has been shown below</p>
     </div>
 
-    <div class="container mt-5">
-        <a class="btn btn-primary " href="./html_conversion/index.html" target="_blank">HTML conversion</a>
-        <a class="btn btn-primary" href="./practice_github_profile_search/github_search.html" target="_blank">Github Search</a>
-        <a class="btn btn-primary" href="#">Another Project</a>
+    <div class="container mt-5 text-center">
+        <a class="btn btn-primary p-5" href="./html_conversion/index.html" target="_blank">HTML conversion</a>
+        <a class="btn btn-primary p-5" href="./practice_github_profile_search/github_search.html" target="_blank">Github Search</a>
+        <a class="btn btn-primary p-5" href="#">Another Project</a>
 
     </div>
 
