--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bootstrap 5 Example</title>
+    <title>My Project</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/bootstrap.css">
@@ -12,16 +12,14 @@
 <body>
     <div class="container">
 
-   <div class="mt-5 p-5 bg-dark  text-center container_css1">
+    <div class="mt-5 p-5 bg-dark  text-center container_css1">
         <h1 class="text-bg-dark ">MY PROJECT</h1>
-        <!-- <p class="bg-info">link has been shown below</p>        -->
-      
     </div>
 
     <div class=" mt-5 text-center container_css2">
         <a class="btn btn-primary" href="./html_conversion/index.html" target="_blank">HTML conversion</a>
         <a class="btn btn-primary" href="./github_profile_search/github_search.html" target="_blank">Github Search</a>
-        <a class="btn btn-primary" href="./captcha/index.html" target="_blank">CAPTCHA</a>
+        <a class="btn btn-primary" href="./react_captcha/index.html" target="_blank">CAPTCHA</a>
 
     </div>
     </div>
