adding some css

--- a/github_profile_search/github_search.html
+++ b/github_profile_search/github_search.html
@@ -11,14 +11,14 @@
 </head>
 
 <body>
-<div class="container bg-black mt-5 text-center p-5 mb-5 myclass-1 " >
+<div class="container mt-5 text-center p-5 mb-5 myclass-1" >
 
-    <h1 class=" mb-4  ">GITHUB PROFILE</h1>
+    <h1 class="mb-4">GITHUB PROFILE</h1>
     <br/>
     
     <form  id="forms">
 
-        <input class="search_1" type="text" id="search" placeholder="search github profile">
+        <input class="search_1" type="text" id="search" placeholder="Search github profile">
         <br/>
         <br/>
 
@@ -28,7 +28,7 @@
     
     <br/>
 
-    <div class="myclass-2"  id="main"></div>
+    <div class="myclass-2" id="main"></div>
 
 </div>
 
