--- a/index.html
+++ b/index.html
@@ -9,19 +9,16 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 
-<body>
-    <div class="container">
-
-    <div class="mt-5 p-5 bg-dark  text-center container_css1">
-        <h1 class="text-bg-dark ">MY PROJECT</h1>
-    </div>
-
-    <div class=" mt-5 text-center container_css2">
+<body >
+    
+    <div class="container text-center my_cont">
+    <div class=" mt-5 container_css2">
         <a class="btn btn-primary" href="./html_conversion/index.html" target="_blank">HTML conversion</a>
         <a class="btn btn-primary" href="./github_profile_search/github_search.html" target="_blank">Github Search</a>
-        <a class="btn btn-primary" href="./react_captcha/index.html" target="_blank">CAPTCHA</a>
+        <!-- <a class="btn btn-primary" href="./react_captcha/index.html" target="_blank">CAPTCHA</a> -->
 
     </div>
+   <h1 class="click-above text-bg-primary " >Click Above The Link</h1>
     </div>
     
 
