--- a/html_conversion/index.html
+++ b/html_conversion/index.html
@@ -6,19 +6,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./font1/all.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
     
 
     
 </head>
 
 <body>
-
+<div class="w-100 ">
     <header class="main-head">
         <div class="hell">
         <img src="./images/logo.png">
         </div>
-        <div class="div">
-            <ul class="list">
+        <div class="div   justify-content-center">
+            <ul class="list mt-3">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Product</a></li>
                 <li><a href="#">Promo</a></li>
@@ -30,6 +31,8 @@
             </button>
         </div>
     </header>
+</div>
+
     <section class="main-body">
         <h1>We care about your pet</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<span class="p-block"> Voluptatem mollitia sed
@@ -318,7 +321,7 @@
     </footer> 
 
 
-
+</div>
 </body>
 
 </html>
