--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./index.css">
+    <!-- <script src="../../html/react/myapp/src/index.js"></script>/ -->
 </head>
 
 <body >
@@ -15,6 +16,7 @@
     <div class=" mt-5 container_css2">
         <a class="btn btn-primary" href="./html_conversion/index.html" target="_blank">HTML conversion</a>
         <a class="btn btn-primary" href="./github_profile_search/github_search.html" target="_blank">Github Search</a>
+        <a class="btn btn-primary" href="../../html/react/myapp/src/index.js" target="_blank">Captcha</a>
         
 
     </div>
